Closed
Bug 1566697
Opened 6 years ago
Closed 6 years ago
Build error in SVGPathData.cpp:170:10: error: use of undeclared identifier 'isfinite'
Categories
(Core :: SVG, defect, P3)
Core
SVG
Tracking
()
RESOLVED
FIXED
mozilla70
| Tracking | Status | |
|---|---|---|
| firefox70 | --- | fixed |
People
(Reporter: darktrojan, Assigned: heycam)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
In file included from /home/geoff/mozilla/mozilla-central/obj-x86_64-pc-linux-gnu/dom/svg/Unified_cpp_dom_svg6.cpp:83:
/home/geoff/mozilla/mozilla-central/dom/svg/SVGPathData.cpp:170:10: error: use of undeclared identifier 'isfinite'; did you mean 'std::isfinite'?
if (!isfinite(state.length)) {
^~~~~~~~
std::isfinite
As discussed on IRC, this seems to be a unified build problem.
| Assignee | ||
Comment 1•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → cam
Status: NEW → ASSIGNED
Priority: -- → P3
| Assignee | ||
Comment 2•6 years ago
|
||
Pushed by cmccormack@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7e6ac55da4ff
Fix unified build problem. r=longsonr
Comment 4•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox70:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Updated•4 years ago
|
Has Regression Range: --- → yes
Updated•4 years ago
|
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•