Bug 1566697 - Fix unified build problem. r=longsonr

Differential Revision: https://phabricator.services.mozilla.com/D38262